# Concurrente_Proyecto

./: .gitignore  README.md
REV0/MNIST/: MNISTDemo.java  Main.java  MainProbarMuestra.java  MainProbarMuestraHilos.java  MainProbarMuestraSecuencial.java  MainTrainMNIST.java  compilacion.txt
REV2/MNIST/: MLP.java  MainEntrenarGuardar.java  MainEntrenarWord2Vec.java  MainFormularioMNIST.java  MainFormularioWord2Vec.java  MainMenu.java  MainUsarModelo.java  Word2VecModel.java  compilacion.txt
REV2/MNIST/Imagenes/: convertir_mnist_png.py
REV3/: README_EJECUCION.txt
REV3/CLIENTE_MICRO_CHUNK/redesOk/: Cliente50.java  MainMenuCliente.java
REV3/ENTRENAMIENTO_IA/: README_GENERAL.txt
REV3/ENTRENAMIENTO_IA/GENERAR_MODELO_MNIST/: README_MNIST.txt
REV3/ENTRENAMIENTO_IA/GENERAR_MODELO_WORD2VEC/corpus/: corpus_texto2.txt  corpus_texto3.txt
REV3/SERVIDOR_MICRO_CHUNK/redesOk/: MLP.java  Servidor50.java  TCPServerThread50.java  Word2VecModel.java
REV4/: README_EJECUCION.txt
REV4/CLIENTE_MICRO_CHUNK-C++/: README.md
REV4/CLIENTE_MICRO_CHUNK-C++/ClienteGUI50/: CMakeLists.txt  main.cpp  mainformulariochatcliente.cpp  mainformulariochatcliente.h  mainformulariochatcliente.ui  mainmenuclient.cpp  mainmenuclient.h  mainmenuclient.ui  mainwindowcliente50.cpp  mainwindowcliente50.h  mainwindowcliente50.ui  tcpclient50.cpp  tcpclient50.h
REV4/CLIENTE_MICRO_CHUNK-JAVA/redesOk/: MainFormularioMNISTCliente.java  MainFormularioWord2VecCliente.java  TCPClient50.java
REV4/CLIENTE_MICRO_CHUNK-PYTHON/: __main__.py  cliente_main.py  form_mnist.py  form_w2v.py  main_menu_cliente.py  tcp_client_50.py
REV4/ENTRENAMIENTO_IA/GENERAR_MODELO_MNIST/generar/mnist/: MLP.java  MNISTDataset.java  MNISTLoader.java  MainEntrenarGuardar.java
REV4/ENTRENAMIENTO_IA/GENERAR_MODELO_WORD2VEC/: README_WORD2VEC.txt
REV4/ENTRENAMIENTO_IA/GENERAR_MODELO_WORD2VEC/corpus/: corpus_texto4.txt
REV4/ENTRENAMIENTO_IA/GENERAR_MODELO_WORD2VEC/generar/word2vec/: MainEntrenarWord2Vec.java  Word2VecModel.java
REV4/SERVIDOR_MICRO_CHUNK-JAVA/redesOk/: MNISTDataset.java  TCPServer50.java
